src/app/page.module.css
.formContainer {
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  height: 100vh;
  max-width: 100vw;
  background-color: var(--color-background);
  gap: 20px;
  color: var(--color-text);
}

.formContainer nav {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 20px;
  background-color: var(--color-background);

  gap: 20px;
}

.formContainer nav img {
  background-color: #080808;
  padding: 10px;
  border-radius: 5px;
}

.formContainer nav p {
  color: var(--color-text);
  font-size: 1.2rem;
  margin: 0;
  font-weight: bold;
  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
  cursor: pointer;
}

.formContainer footer {
  text-align: center;
  position: fixed;
  bottom: 0;
  padding: 10px 0;
  background-color: var(--color-background);
  width: 100%;
  color: var(--color-text);
}

.formContainer h1 {
  color: var(--color-text);
}

.form {
  color: var(--color-text);
  padding: 30px;
  border-radius: 8px;
  border: 1px solid rgba(255, 255, 255, 0.185);
  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
  width: 100%;
  max-width: 500px;
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.btn_theme {
  background-color: transparent;
  position: absolute;
  top: 10px;
  right: 10px;
  z-index: 100;
  border: none;
  transition: transform 0.3s ease-in-out;
}
.btn_theme:hover {
  cursor: pointer;
  border: none;
  transition: transform 0.3s ease-in-out;
}

.proyectosCargados {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.proyectosCargados h2 {
  margin: 0;
}

.proyectosCargados ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

@media (max-width: 768px) {
  .formContainer nav {
    flex-direction: column;
  }
  .form {
    display: none;
  }
}

